2006-04-17 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : Many fixes for massmail.php
		http://gforge.org/tracker/?func=detail&aid=2255&group_id=1&atid=106

2006-04-01 Tim Perdue   <tim@gforgegroup.com>

	* purging unused strings and unmaintained language files 

2006-03-27 Daniel Perez <daniel@gforgegroup.com>
	* Fixed bug : Capital letters with "stress marks" are wrong in language/Spanish.tab
		http://gforge.org/tracker/?func=detail&aid=2099&group_id=1&atid=105

2006-03-20 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : Fixes bug in tracker template upload
		http://gforge.org/tracker/?func=detail&aid=2000&group_id=1&atid=106
	* Applied patch : Plugin manager forgets to report problems, and should tell more about db init errors
		http://gforge.org/tracker/?func=detail&aid=1964&group_id=1&atid=106
	* Applied patch : updated italian.tab
		http://gforge.org/tracker/?func=detail&aid=1921&group_id=1&atid=106		
	* Applied patch : updated chinese.tab	
		http://gforge.org/tracker/?func=detail&aid=1907&group_id=1&atid=106
	* Applied patch : Artifact::create() looses sql error on insertion
		http://gforge.org/tracker/?func=detail&aid=1909&group_id=1&atid=106
	* Applied patch : Error message when validation of list name fails is not informative enoug
		http://gforge.org/tracker/?func=detail&aid=1863&group_id=1&atid=106

2006-03-09 Daniel Perez <daniel@gforgegroup.com>
	* fixed bug in ProjectTask -> $send_task_email===false

2006-03-08 Tim Perdue   <tim@gforgegroup.com>

	* addslashes() needs to be applied to all incoming SOAP messages
	* suppressing sending of emails for msproject
	* document::sendNotice was never implemented

2006-02-22 Marcelo Mottall <marcelo@gforgegroup.com>
	* Rewrote usergroup cronjob, it adds markers in /etc files now
	* Split usergroup cronjob in two: usergroup and homedirs.php

2006-02-17 Daniel Perez <daniel@gforgegroup.com>
	* Added activity rss feed
	* Modified gforgegroup and osx theme to support rss feeds in the header
