@@ -1,3 +1,8 @@
+2006-04-20 Daniel Perez <daniel@gforgegroup.com>
+	* Applied patch : use a parameter instead of hardcoded admin address
+		https://gforge.org/tracker/?func=detail&aid=2251&group_id=1&atid=106
+
+
 2006-04-17 Daniel Perez <daniel@gforgegroup.com>
 	* Applied patch : Many fixes for massmail.php
 		http://gforge.org/tracker/?func=detail&aid=2255&group_id=1&atid=106
